--- a/Similarity Search/Makefile
+++ b/Similarity Search/Makefile
@@ -3,7 +3,7 @@
 
 CC = g++
 
-CC_FLAGS = -Wall -g -std=c++11  -Wno-reorder -Ofast
+CC_FLAGS = -g -std=c++11  -Wno-reorder -Ofast
 
 BUILD_DIR = ./build
 EXEC_DIR = ./executables
@@ -41,27 +41,30 @@ clean_cluster:
 	$(RM) -r $(BUILD_DIR)/clustering $(EXEC_DIR)/clustering
 
 # Default Arguments for path I am in
-LSH_ARGS  = -d ../misc/original_space/train_set/train-images-idx3-ubyte -q ../misc/original_space/test_set/t10k-images-idx3-ubyte -i ../misc/reduced_space/train_reduced_60k -s ../misc/reduced_space/test_reduced_10k -k 4 -L 4 -o executables/lsh/lsh_out -N 1
+LSH_ARGS  = -d ../misc/original_space/train_set/t5k-images-idx3-ubyte -q ../misc/original_space/test_set/t1k-images-idx3-ubyte -i ../misc/reduced_space/train_reduced_5k -s ../misc/reduced_space/test_reduced_1k -k 4 -L 4 -o executables/lsh/lsh_out -N 1
+LSH_ARGS_BIG  = -d ../misc/original_space/train_set/train-images-idx3-ubyte -q ../misc/original_space/test_set/t10k-images-idx3-ubyte -i ../misc/reduced_space/train_reduced_60k -s ../misc/reduced_space/test_reduced_10k -k 4 -L 4 -o executables/lsh/lsh_out -N 1
+
+
 CUBE_ARGS = -d misc/datasets/train-images-idx3-ubyte  -q misc/querysets/t10k-images-idx3-ubyte -k 14 -M 3000 -probes 100 -o executables/hypercube/cube_out -N 1 -R 10000
+
 CLUSTER_LLOYDS_ARGS = -d ../misc/original_space/train_set/t5k-images-idx3-ubyte -c config/cluster.conf -o executables/clustering/cluster_lloyds_out -i ../misc/reduced_space/train_reduced_5k -n ../misc/classes_for_clustering_small
+CLUSTER_LLOYDS_ARGS_BIG = -d ../misc/original_space/train_set/train-images-idx3-ubyte -c config/cluster.conf -o executables/clustering/cluster_lloyds_out -i ../misc/reduced_space/train_reduced_60k -n ../misc/classes_for_clustering
 
 # Running
 run_lsh: lsh
 	./$(EXEC_DIR)/lsh/lsh $(LSH_ARGS)
+run_lsh_big: lsh
+	./$(EXEC_DIR)/lsh/lsh $(LSH_ARGS_BIG)
+
 run_cube: cube
 	./$(EXEC_DIR)/hypercube/cube $(CUBE_ARGS)
+
 run_cluster_lloyds: cluster
 	./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LLOYDS_ARGS)
-run_cluster_lloyds_complete: cluster
-	./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LLOYDS_COMPLETE_ARGS)
-run_cluster_lsh: cluster
-	./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LSH_ARGS)
-run_cluster_lsh_complete: cluster
-	./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LSH_COMPLETE_ARGS)
-run_cluster_cube: cluster
-	./$(EXEC_DIR)/clustering/cluster $(CLUSTER_CUBE_ARGS)
-run_cluster_cube_complete: cluster
-	./$(EXEC_DIR)/clustering/cluster $(CLUSTER_CUBE_COMPLETE_ARGS)
+run_cluster_lloyds_big: cluster
+	./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LLOYDS_ARGS_BIG)
+
+
 
 # Valgrind
 valgrind_lsh: lsh
@@ -70,16 +73,6 @@ valgrind_cube: cube
 	valgrind ./$(EXEC_DIR)/hypercube/cube $(CUBE_ARGS)
 valgrind_cluster_lloyds: cluster
 	valgrind ./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LLOYDS_ARGS)
-valgrind_cluster_lloyds_complete: cluster
-	valgrind ./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LLOYDS_COMPLETE_ARGS)
-valgrind_cluster_lsh: cluster
-	valgrind ./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LSH_ARGS)
-valgrind_cluster_lsh_complete: cluster
-	valgrind ./$(EXEC_DIR)/clustering/cluster $(CLUSTER_LSH_COMPLETE_ARGS)
-valgrind_cluster_cube: cluster
-	valgrind ./$(EXEC_DIR)/clustering/cluster $(CLUSTER_CUBE_ARGS)
-valgrind_cluster_cube_complete: cluster
-	valgrind ./$(EXEC_DIR)/clustering/cluster $(CLUSTER_CUBE_COMPLETE_ARGS)
 	
 
 -include $(DEPS)
